package com.example.iterator.demo;

public interface Aggregate {
    Iterator iterator();
}
