package com.example.iterator.demo;

public interface Iterator {
    boolean hasNext();
    Object next();
}
